--- a/nbs/1 - Download Dataset.ipynb
+++ b/nbs/1 - Download Dataset.ipynb
@@ -2,21 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "7ff6059a",
+   "execution_count": 5,
+   "id": "f30474eb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('/Users/hni1/Desktop/Dev/ai-api')"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pathlib \n",
     "\n",
@@ -30,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d0521b9",
+   "id": "9d0e1444",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,8 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "6103a173",
+   "execution_count": 6,
+   "id": "b9d6be47",
    "metadata": {},
    "outputs": [
     {
@@ -49,18 +38,18 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100  198k  100  198k    0     0   307k      0 --:--:-- --:--:-- --:--:--  307k\n"
+      "100  198k  100  198k    0     0   144k      0  0:00:01  0:00:01 --:--:--  144k 0      0      0 --:--:-- --:--:-- --:--:--     0\n"
      ]
     }
    ],
    "source": [
-    "! curl https://archive.ics.uci.edu/ml/machine-learning-databases/00228/smsspamcollection.zip -o $BASE_DIR/spam-dataset"
+    "! curl https://archive.ics.uci.edu/ml/machine-learning-databases/00228/smsspamcollection.zip -o $ZIPS_DIR/spam-dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6369cf87",
+   "id": "30299b11",
    "metadata": {},
    "outputs": [],
    "source": []
