Add youtube dataset

--- a/nbs/1 - Download Dataset.ipynb
+++ b/nbs/1 - Download Dataset.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "f30474eb",
+   "execution_count": 7,
+   "id": "cb4fd25e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,23 +13,27 @@
     "\n",
     "DATASET_DIR = BASE_DIR / \"datasets\"\n",
     "ZIPS_DIR = DATASET_DIR / \"zips\"\n",
-    "ZIPS_DIR.mkdir(exist_ok=True,parents=True)"
+    "ZIPS_DIR.mkdir(exist_ok=True,parents=True)\n",
+    "\n",
+    "SPAM_SMS_ZIP_PATH = ZIPS_DIR / \"spam-dataset.zip\"\n",
+    "SPAM_YOUTUBE_ZIP_PATH = ZIPS_DIR / \"spam-dataset.zip\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9d0e1444",
+   "execution_count": 8,
+   "id": "31fbe1b4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "SMS_SPAM_ZIP = \"https://archive.ics.uci.edu/ml/machine-learning-databases/00228/smsspamcollection.zip\""
+    "SMS_SPAM_ZIP = \"https://archive.ics.uci.edu/ml/machine-learning-databases/00228/smsspamcollection.zip\"\n",
+    "YOUTUBE_SPAM_ZIP = \"https://archive.ics.uci.edu/ml/machine-learning-databases/00380/YouTube-Spam-Collection-v1.zip\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "b9d6be47",
+   "execution_count": 9,
+   "id": "63d38cee",
    "metadata": {},
    "outputs": [
     {
@@ -38,18 +42,18 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100  198k  100  198k    0     0   144k      0  0:00:01  0:00:01 --:--:--  144k 0      0      0 --:--:-- --:--:-- --:--:--     0\n"
+      "100  198k  100  198k    0     0   308k      0 --:--:-- --:--:-- --:--:--  308k\n"
      ]
     }
    ],
    "source": [
-    "! curl https://archive.ics.uci.edu/ml/machine-learning-databases/00228/smsspamcollection.zip -o $ZIPS_DIR/spam-dataset"
+    "! curl https://archive.ics.uci.edu/ml/machine-learning-databases/00228/smsspamcollection.zip -o $SPAM_SMS_ZIP_PATH"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30299b11",
+   "id": "8a736d93",
    "metadata": {},
    "outputs": [],
    "source": []
