--- a/nbs/2 - Download Dataset & Unzip.ipynb
+++ b/nbs/2 - Download Dataset & Unzip.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "b1d29642",
+   "execution_count": 61,
+   "id": "5724848b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pathlib \n",
+    "import random\n",
     "\n",
     "BASE_DIR = pathlib.Path().resolve().parent\n",
     "DATASET_DIR = BASE_DIR / \"datasets\"\n",
     "EXPORT_DIR = DATASET_DIR / \"export\"\n",
     "EXPORT_DIR.mkdir(exist_ok=True,parents=True)\n",
-    "SPAM_DATASET_PATH = EXPORT_DIR / \"spam-dataset.cs\"\n",
+    "SPAM_DATASET_PATH = EXPORT_DIR / \"spam-dataset.csv\"\n",
     "\n",
     "ZIPS_DIR = DATASET_DIR / \"zips\"\n",
     "ZIPS_DIR.mkdir(exist_ok=True,parents=True)\n",
@@ -25,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ea2b9be2",
+   "id": "99eb5b42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "bfaa1a14",
+   "id": "ed93cc3f",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "957d91b5",
+   "id": "e23a7017",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "9af1ea48",
+   "id": "401cf2cf",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "83e5dfa6",
+   "id": "c5cf0b5e",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "8da674de",
+   "id": "39b8456a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "916baf8a",
+   "id": "e0c27a33",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "8f12d973",
+   "id": "b2b9a009",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "b8eb195d",
+   "id": "98dd0b9d",
    "metadata": {},
    "outputs": [
     {
@@ -337,11 +338,235 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c6f6551a",
+   "execution_count": 53,
+   "id": "0a7dc28d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv(SPAM_DATASET_PATH, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e62f98df",
+   "metadata": {},
+   "source": [
+    "## Convert Dataset into Vectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "333b3a69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = df['label'].tolist()\n",
+    "texts = df['text'].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "58cc1747",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_legend = {\"ham\":0, \"spam\":1}\n",
+    "label_legend_inverted = {f\"{v}\": k for k,v in label_legend.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "e9e529dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels_as_int = [label_legend[x] for x in labels]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "29623926",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels_as_int[120]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "647e67f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random_idx = random.randint(0, len(labels))\n",
+    "\n",
+    "assert texts[random_idx] == df.iloc[random_idx].text\n",
+    "assert labels[random_idx] == df.iloc[random_idx].label\n",
+    "assert label_legend_inverted[str(labels_as_int[random_idx])] == df.iloc[random_idx].label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "9cf2b703",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.preprocessing.text import Tokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "ca37cb3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAX_NUM_WORDS = 280 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "0af54fc3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = Tokenizer(num_words = MAX_NUM_WORDS)\n",
+    "tokenizer.fit_on_texts(texts)\n",
+    "sequences = tokenizer.texts_to_sequences(texts)\n",
+    "#sequences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "ce975a0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word_index = tokenizer.word_index\n",
+    "#word_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "e7d660bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "bfabf19c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAX_SEQ_LENGTH = 300"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "256a94fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = pad_sequences(sequences, maxlen=MAX_SEQ_LENGTH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "b0abcf2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from tensorflow.keras.utils import to_categorical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "de96ec4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 1, ..., 1, 1, 0])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels_as_int_array = np.asarray(labels_as_int)\n",
+    "labels_as_int_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "b722a55f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       ...,\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = to_categorical(labels_as_int_array)\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b145ca80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
   }
  ],
  "metadata": {
