--- a/nbs/2 - Download Dataset & Unzip.ipynb
+++ b/nbs/2 - Download Dataset & Unzip.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 85,
    "id": "5724848b",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,10 @@
     "ZIPS_DIR.mkdir(exist_ok=True,parents=True)\n",
     "\n",
     "SPAM_SMS_ZIP_PATH = ZIPS_DIR / \"sms-spam-dataset.zip\"\n",
-    "SPAM_YOUTUBE_ZIP_PATH = ZIPS_DIR / \"youtube-spam-dataset.zip\""
+    "SPAM_YOUTUBE_ZIP_PATH = ZIPS_DIR / \"youtube-spam-dataset.zip\"\n",
+    "\n",
+    "METADATA_EXPORT_PATH = EXPORT_DIR / \"spam-metaddata.pkl\"\n",
+    "TOKENIZER_EXPORT_PATH = EXPORT_DIR / \"spam-tokeni\""
    ]
   },
   {
@@ -348,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e62f98df",
+   "id": "bee84381",
    "metadata": {},
    "source": [
     "## Convert Dataset into Vectors"
@@ -357,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "333b3a69",
+   "id": "bafe1e84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "58cc1747",
+   "id": "bc80a74e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "e9e529dd",
+   "id": "661c2d4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "29623926",
+   "id": "6dd034f2",
    "metadata": {
     "scrolled": false
    },
@@ -412,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "647e67f9",
+   "id": "9256471b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "9cf2b703",
+   "id": "5e9c0d3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "ca37cb3a",
+   "id": "19c7a535",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "0af54fc3",
+   "id": "c17f12e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "ce975a0b",
+   "id": "67a12c4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "e7d660bb",
+   "id": "33aadb83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "bfabf19c",
+   "id": "a8eb7856",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "256a94fe",
+   "id": "7f4c84a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "b0abcf2a",
+   "id": "be48244a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "de96ec4d",
+   "id": "6f70b9c9",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "b722a55f",
+   "id": "340c5f47",
    "metadata": {},
    "outputs": [
     {
@@ -560,12 +563,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b145ca80",
+   "execution_count": 80,
+   "id": "87b810df",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "3d63e8aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "63cc5dd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "c0f1ba8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_data = {\n",
+    "    \"X_train\": X_train,\n",
+    "    \"X_test\": X_test,\n",
+    "    \"y_train\": y_train,\n",
+    "    \"y_test\": y_test,\n",
+    "    \"max_words\": MAX_NUM_WORDS,\n",
+    "    \"max_seq_length\": MAX_SEQ_LENGTH,\n",
+    "    \"label_legend\": label_legend,\n",
+    "    \"label_legend_inverted\": label_legend_inverted\n",
+    "}\n",
+    "\n",
+    "tokenizer_json = tokenizer.to_json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6870fc54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(METADATA_EXPORT_PATH, 'wb') as f:\n",
+    "    pickle.dump(training_data, f)"
    ]
   }
  ],
