--- a/nbs/2 - Download Dataset & Unzip.ipynb
+++ b/nbs/2 - Download Dataset & Unzip.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 89,
    "id": "5724848b",
    "metadata": {},
    "outputs": [],
@@ -22,8 +22,8 @@
     "SPAM_SMS_ZIP_PATH = ZIPS_DIR / \"sms-spam-dataset.zip\"\n",
     "SPAM_YOUTUBE_ZIP_PATH = ZIPS_DIR / \"youtube-spam-dataset.zip\"\n",
     "\n",
-    "METADATA_EXPORT_PATH = EXPORT_DIR / \"spam-metaddata.pkl\"\n",
-    "TOKENIZER_EXPORT_PATH = EXPORT_DIR / \"spam-tokeni\""
+    "METADATA_EXPORT_PATH = EXPORT_DIR / \"spam-metadata.pkl\"\n",
+    "TOKENIZER_EXPORT_PATH = EXPORT_DIR / \"spam-tokenizer.json\""
    ]
   },
   {
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bee84381",
+   "id": "5ad59939",
    "metadata": {},
    "source": [
     "## Convert Dataset into Vectors"
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "bafe1e84",
+   "id": "d5800abd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "bc80a74e",
+   "id": "5f8b3026",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "661c2d4a",
+   "id": "feb3d4d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "6dd034f2",
+   "id": "3e7ef2a7",
    "metadata": {
     "scrolled": false
    },
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "9256471b",
+   "id": "2503b28b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "5e9c0d3b",
+   "id": "fa8194ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "19c7a535",
+   "id": "bb108903",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "c17f12e4",
+   "id": "3f4acff5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "67a12c4e",
+   "id": "a2880a39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "33aadb83",
+   "id": "14c4f359",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "a8eb7856",
+   "id": "49761f69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "7f4c84a2",
+   "id": "967f9187",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "be48244a",
+   "id": "9efb848f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "6f70b9c9",
+   "id": "065ff17b",
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "340c5f47",
+   "id": "8fc2b89d",
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "87b810df",
+   "id": "2abb2957",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "3d63e8aa",
+   "id": "f5d45690",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "63cc5dd8",
+   "id": "30c4d2a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,10 +593,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "c0f1ba8e",
+   "execution_count": 87,
+   "id": "f6b443b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1090335"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "training_data = {\n",
     "    \"X_train\": X_train,\n",
@@ -609,19 +620,28 @@
     "    \"label_legend_inverted\": label_legend_inverted\n",
     "}\n",
     "\n",
-    "tokenizer_json = tokenizer.to_json()"
+    "tokenizer_json = tokenizer.to_json()\n",
+    "TOKENIZER_EXPORT_PATH.write_text(tokenizer_json)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6870fc54",
+   "execution_count": 90,
+   "id": "ca83a41d",
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(METADATA_EXPORT_PATH, 'wb') as f:\n",
     "    pickle.dump(training_data, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "293ba723",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
